# videostove-cli-runpod

./: .gitignore  Dockerfile  LICENSE  README.md  cli-job-maker.py  entrypoint.sh  launch_wsl_here.bat  pyproject.toml  requirements.txt  run_main.py  start.sh
test_jobs/: batch__single_image.yaml  batch__twovet.yaml
tests/: test_cli_plan.py  test_preset_detect.py  test_rclone_io.py  test_scan.py
tmp_projects/assets/presets/: science.json  single_image.json  twovet.json
videostove_cli/: __init__.py  cli.py  config.py  headless_bridge.py  media_scan.py  presets.py  rclone_io.py  rclone_setup.py  render.py  utils.py  version.py
